auto-hide menu on mobile devices fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,6 @@
 	max-width: 960px;
 }
 
-.jumbotron {
-	background: white;
-}
-
 body { 
     padding-top: 50px; 
 }
